Transitioned to JPA connected with ad-hoc connection pool. Still have problems with cdi inject, however.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,7 +7,7 @@
     </h:head>
     <h:body>
         #{sample.message}<br/>
-        #{sample.getManufacturerById("19986982")}
+        #{sample.getBidById("1")}
     </h:body>
 </html>
 
