Fixed cdi inject and all JPA config is now working

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -6,8 +6,8 @@
         <title>Home Page</title>
     </h:head>
     <h:body>
-        #{sample.message}<br/>
-        #{sample.getBidById("1")}
+        #{sampleBean.message}<br/>
+        #{sampleBean.getBidById("1")}
     </h:body>
 </html>
 
